# donna

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
server/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
server/.bruno/: bruno.json  collection.bru
server/.bruno/auth/: Email Verify Confirm.bru  Email Verify Request.bru  Google Callback (manual).bru  Google Login URL.bru  Logout.bru  Password Confirm.bru  Password Recover.bru  Password Validate.bru  Signin.bru  Signup.bru  Token Refresh.bru
server/.bruno/chat/: Channel Create.bru  Channel Detail.bru  Channel Document Detail.bru  Channels List.bru  (+9 more)
server/deploy/: entrypoint.sh
server/donna/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
server/plans/: 01-architecture.md  02-data-model.md  03-conventions-and-api.md  04-roadmap.md  05-integration-architecture.md  06-deployment-and-self-hosting.md  07-integration-platform-landscape.md  08-connection-pattern.md  08a-gmail-integration.md  08b-google-drive-integration.md  09-auth-and-notifications.md  10-realtime-layer.md  11-nango-integration.md  12-deployment-pipelines.md  13-agent-runtime-maturity.md  13-claude-code-pattern-adoption.md  14-frontend-integration.md  15-deferred-and-followups.md  15-remaining-roadmap.md  16-remaining-work.md  README.md  communication-platform-plan.md  fathom-webhook-lifecycle.md  whats-app-integration.md
server/scripts/: .gitignore  cleanup_test_residue.sh  sync_emojis.py
(+663 files in other folders)
